# multiverse

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/multiverse/: constants.py  galaxy.py  main.py
