[project]
name = "multiverse"
version = "0.0.1"
authors = [
    {name = "Ali Hemmatifar", email = "alihemmati19@gmail.com"},
]
description = "Persistent randomized generation of the universe with extraterrestrial life."
readme = "README.md"
dependencies = [
    "pygame-ce",
    "jupyter",
]

[project.optional-dependencies]
dev = [
    "pyinstaller",
    "black[jupyter]",
    "ruff",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = [
    # isort
    "I001"
]

[tool.mypy]
exclude = [
    "venv",
    ".venv",
]